weston (14.0.0-1~exp1) UNRELEASED; urgency=medium

  * New upstream release.
  * Drop Remove_upper_limit_of_required_neatvnc_version.patch,
      no longer required.
  * Add new Build-Deps: libdisplay-info-dev
  * Bump SONAME to libweston-14-0
  * Update symbols file

 -- Dylan Aïssi <daissi@debian.org>  Wed, 04 Sep 2024 16:16:22 +0200

weston (13.0.3-1) unstable; urgency=medium

  * New upstream release.

 -- Dylan Aïssi <daissi@debian.org>  Wed, 05 Jun 2024 17:25:19 +0200

weston (13.0.1-1) unstable; urgency=medium

  * New upstream release.
  * Update symbols file
  * Standards-Version: 4.7.0 (no changes required)
  * Don't install rdp-backend on ia64 (disabled)

 -- Dylan Aïssi <daissi@debian.org>  Tue, 23 Apr 2024 21:47:40 +0200

weston (13.0.0-5) unstable; urgency=medium

  * Don't install disabled features on ia64 and sparc64
  * Do not check the upper limit for neatvnc version (Closes: #1065816)

 -- Dylan Aïssi <daissi@debian.org>  Mon, 11 Mar 2024 12:01:23 +0100

weston (13.0.0-4) unstable; urgency=medium

  * Fix syntax of non fatal tests

 -- Dylan Aïssi <daissi@debian.org>  Tue, 27 Feb 2024 09:24:06 +0100

weston (13.0.0-3) unstable; urgency=medium

  * Retrict architectures where tests are run
  * Disable backend-rdp for ia64 and backend-vnc for ia64 and sparc64,
      because of Build-Deps not available.
  * Mark Skip_xwayland_test.patch as 'Forwarded: not-needed'
  * Switch from pkg-config to pkgconf

 -- Dylan Aïssi <daissi@debian.org>  Mon, 26 Feb 2024 18:02:10 +0100

weston (13.0.0-2) unstable; urgency=medium

  * Mark libweston-13-dev as 'Multi-Arch: same'
  * Install all manpages through weston.install
  * Enable all hardening flags
  * Add Build-Depends-Package field in symbols file
  * Add debian/upstream/metadata
  * Apply wrap-and-sort -a
  * Skip xwayland test since it fails at build time and on the
      autopkgtest infrastructure
  * Use build time tests as autopkgtest until upstream tests can be installed
